--- a/s-album/package.json
+++ b/s-album/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "element-plus": "^2.8.7",
+    "sass": "^1.80.6",
     "vue": "^3.5.12"
   },
   "devDependencies": {
